force-app/main/default/objects/ClientImpact__c/ClientImpact__c.object-meta.xml
<CustomObject>
    <label>Client Impact</label>
    <nameField>
        <label>ClientImpact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>