force-app/main/default/objects/ClientImpact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Impacts</relationshipLabel>
    <relationshipName>Client_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>