force-app/main/default/objects/ClientImpact__c/fields/ExposureAmount__c.field-meta.xml
<CustomField>
    <fullName>ExposureAmount__c</fullName>
    <label>Exposure Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>