force-app/main/default/objects/ClientImpact__c/fields/ImpactLevel__c.field-meta.xml
<CustomField>
    <fullName>ImpactLevel__c</fullName>
    <label>Impact Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>