force-app/main/default/objects/ClientImpact__c/fields/MarketEvent__c.field-meta.xml
<CustomField>
    <fullName>MarketEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Event</label>
    <referenceTo>Market_Event__c</referenceTo>
    <relationshipLabel>Client Impacts</relationshipLabel>
    <relationshipName>Client_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>